# bake

./: Bakefile  Cargo.toml  README.md  install.c
.github/workflows/: crates.yml  releases.yml
Formula/: bake.rb
src/: main.rs  parser.rs  task.rs
