[package]
name = "bake-tool"
version = "0.1.2"
edition = "2021"
description = "A minimal and fast alternative to Make, written in Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/myferr/bake"
homepage = "https://github.com/myferr/bake"
keywords = ["build", "cli", "task-runner", "makefile"]
categories = ["command-line-utilities"]
exclude = [".github", "target", "Bakefile", ".vscode", "Formula", "Formula/**"]

[dependencies]
clap = { version = "4", features = ["derive"] }
